# leader_follower

./: .gitignore  OneDrive - Johns Hopkins  pnpm-lock.yaml  run_simulation.py  standalone_ui_server.py  test_websocket.py  test_websocket_server.py
protocol/: abstract_network.py  channel_driver.py  checkpoint_manager.py  device_classes.py  device_state.py  deviceid_util.py  driver.py  message_classes.py  pyproject.toml  requirements.txt  sim_tiebreak_scenarios.py  simulation_network.py  terminal_visualizer.py  test_device_state_store.py  ui_device.py  visualizer_integration.py
protocol/tla/: LeaderFollower.cfg  LeaderFollower.tla  LeaderFollower_Simplified.tla
tests/: devices_harness.py  test_harness.py
ui/web/: package.json  pnpm-lock.yaml
ui/web/src/: App.tsx
ui/web/src/components/: track-box.tsx
ui/web/src/components/ui/: DeviceList.tsx  GraphLegend.tsx  MessageLog.tsx  NetworkGraph.tsx  SimulationControls.tsx  input.tsx
ui/web/src/lib/: websocket.ts
ui/web/src/stores/: websocket.ts
ui/web/src/types/: actions.ts  websocket.ts
