[project]
name = "leaderfollower"
version = "0.1.0"
description = "Protocol to co-ordinate different distributed devices."
authors = [
    {name = "Dhilan Patel, Kayleigh, Bill Njoroge"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = "^3.10"
dependencies = [
    "aiohttp (==3.11.16)",
    "aiohttp-cors (==0.8.1)",
    "websockets (==14.1)",
    "dill (==0.3.9)",
    "asyncio (==3.4.3)",
    "zigpy (>=0.80.0,<0.81.0)",
    "pyqt5 (>=5.15.11,<6.0.0)",
    "numpy (>=2.2.5,<3.0.0)"
]

package-mode= false 

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
